--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    
+
+
+
+
+
+
+
+
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+       android:id="@+id/floatingId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/deep_blue"
+        android:src="@drawable/outline_add_24"
+        app:tint="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="40dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"/>
 </RelativeLayout>
