--- a/app/src/main/res/layout/activity_add_edit.xml
+++ b/app/src/main/res/layout/activity_add_edit.xml
@@ -57,6 +57,7 @@
         android:layout_height="400dp"/>
     
     <Button
+        android:id="@+id/btn"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:layout_marginTop="25dp"
