--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -1,10 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UpdateNoteActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="25dp"
+        android:textSize="18sp"
+        android:text="Update Notes"
+        android:textColor="@color/deep_blue"
+        android:textStyle="bold"/>
+
+    <EditText
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:elevation="2dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/edit_shape"
+        android:hint="Title"
+        android:id="@+id/edUpdateTitle"
+        android:paddingLeft="10dp"
+        android:inputType="textPersonName"
+        android:textColor="@color/deep_blue"
+        android:textColorHint="@color/deep_blue"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"/>
+
+    <EditText
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:elevation="2dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/edit_shape"
+        android:hint="Description"
+        android:id="@+id/edUpdateDesc"
+        android:paddingTop="10dp"
+        android:padding="10dp"
+        android:gravity="top"
+        android:paddingLeft="10dp"
+        android:inputType="textPersonName"
+        android:textColor="@color/deep_blue"
+        android:textColorHint="@color/deep_blue"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"/>
+
+    <Button
+        android:id="@+id/btn"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/edit_shape"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:elevation="2dp"
+        android:text="Update"
+        android:textStyle="bold"
+        android:textSize="18sp"/>
+
+
+</LinearLayout>
