--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -57,7 +57,7 @@
         android:layout_height="400dp"/>
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btnUpdate"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
         android:layout_marginTop="25dp"
